[package]
name = "request"
version = "1.0.0"
edition = "2021"
authors = ["Advanced HTTP Client Team"]
description = "A comprehensive HTTP client library built with only Rust standard library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/request"
keywords = ["http", "client", "web", "api", "rest"]
categories = ["web-programming::http-client", "network-programming"]

[dependencies]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

[[example]]
name = "complete_demo"
path = "examples/complete_demo.rs"
